--- a/index.html
+++ b/index.html
@@ -6,8 +6,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Heebo:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>Pitchfork</h1>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6">
+            <div class="band-card">
+              <img src="img/mia.jpg" alt="photo de M.I.A." />
+              <h3 class="band-card-title special-band-card-title">
+                M.I.A. Scores First No. 1 Song With Travis Scott’s “FRANCHISE”
+              </h3>
+              <div class="band-card-footer">
+                <p class="band-card-footer-text">
+                  <strong>MATTHEW STRAUSS<br />NEWS</strong> / 58 MINS AGO
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="band-card">
+              <img src="img/theones.jpg" alt="photo de theones" />
+              <h3 class="band-card-title">The Ones: Wifigawd’s “Outside”</h3>
+              <div class="band-card-footer">
+                <p class="band-card-footer-text">
+                  <strong>BY: ALPHONSE PIERRE<br />THE PITCH</strong> / 6 HRS
+                  AGO
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="band-card">
+              <img src="img/bts.jpg" alt="photo des bts" />
+              <h3 class="band-card-title">
+                BTS Break Down Their Albums, From DARK & WILD to MAP OF THE SOUL
+                : 7 | On the Records
+              </h3>
+              <div class="band-card-footer">
+                <p class="band-card-footer-text">
+                  <strong>BY: PITCHFORK<br />VIDEO</strong> / 4 HRS AGO
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="reviews">
+              <p>REVIEWS</p>
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-lg-4 col-xl-6">
+            <div class="review-card">
+              <h3 class="review-title special-review-title">
+                Gabriel Garzón-Montano
+              </h3>
+              <h4 class="review-subtitle special-review-subtitle">Agüita</h4>
+              <p class="review-editor">BY: MATTHEW ISMAL RUIZ / POP/R&B</p>
+              <p class="review-text">
+                Spanning tender acoustic ballads, silky R&B performance, and
+                contemporary urbano swagger, the singer-songwriter and
+                multi-instrumentalist’s second LP unites the facets of his own
+                artistic identity
+              </p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-4 col-xl-3">
+            <div class="review-card">
+              <h3 class="review-title">Hen Ogledd</h3>
+              <h4 class="review-subtitle">Free Humans</h4>
+              <p class="review-editor">BY: JAZZ MONROE / EXPERIMENTAL</p>
+              <p class="review-text">
+                The Newcastle band’s oddball indie pop makes a pitch to those
+                unsure whether to fret over civilizational decline or their own
+                minor burdens: Why not both!
+              </p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-4 col-xl-3">
+            <div class="review-card">
+              <h3 class="review-title">Westside Gunn</h3>
+              <h4 class="review-subtitle">Who Made The Sunshine</h4>
+              <p class="review-editor">BY: ALPHONSE PIERRE / RAP</p>
+              <p class="review-text">
+                The Buffalo rapper’s new project is another serving of glamorous
+                beat loops and gaudy raps delivered with the confidence of
+                someone who believes that all of their thoughts belong in the
+                MoMA.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
